# coding

./: .gitignore  .gitmodules  README.md  practice.code-workspace
C_practice/: DO_RECURSIVE_cafe_social_distance.c  arm.c  binary_period.c  binary_search_tree.c  circular_buffer_queue.c  cyclomatic_redirect.c  day11_2darray.c  day16_str_to_int.c  day6_string_char_by_char.c  day6_string_char_by_char_ERROR.c  day6_string_disect.c  duplicate.c  dyson_test_hour_minute.c  even_odd_separate.c  flow_control.c  gcd_lcm.c  happy_num.c  hashmap_implementation.c  hashset.c  intersection_by_string_TODO.c  intersection_union.c  linked_list_detect_loop.c  linked_list_fifo.c  linked_list_leetcode_exercise.c  linked_list_lifo.c  linked_list_remove_duplicate.c  longest_consec_ones.c  longest_word.c  merge_sort_linked_list.c  missing_elem_in_array.c  move_zero_to_left.c  pascal.c  patterns.c  queue_bfs.c  quick_sort.c  recursive_palindrome.c  recursive_pow.c  repeated_string.c  rotational_cipher.c  selection_sort.c  (+6 more)
C_practice/binary_tree/: binary_search_tree.c  binary_search_tree_mirror.c
C_practice/linked_list/: linked_list_detect_loop.c  linked_list_intersection.c  linked_list_lifo.c
C_practice/recursive/: fibonacci.c
C_practice/sort/: merge_sort.c  quick_sort.c
Cpp_practice/: MakeFile  binary_search.cpp  binary_search_find_index.cpp  day14_linked_list_fifo_queue.cpp  day16_str_to_int.cpp  day17_exception.cpp  day18_queue_stack_palindrome.cpp  day20_bubble_sort.cpp  day21_generic.cpp  day22_binary_search_tree.cpp  day23_binary_search_tree-levelPrint.cpp  day24_removeDuplicates_linklist.cpp  day25_prime_time_complx.cpp  day26_nested_if.cpp  day9_recursion_factorial.cpp  even_odd_separate.cpp  find_duplicate.cpp  find_duplicate_II.cpp  foursum.cpp  happy_num.cpp  intersection.cpp  isomorphic.cpp  linkedIn.cpp  longest_common_subseq.cpp  map.cpp  merge_sort_linked_list_TOFINISH.cpp  pick_a_cafe.cpp  stack.cpp  struct_vs_union.cpp  threesum.cpp  valid_paranthesis.cpp
Cpp_practice/algos/: graph.cpp  queue_bfs.cpp  sub_array_sum.cpp
Cpp_practice/binary_tree/: binary_search.cpp  binary_search_find_index.cpp  day23_binary_search_tree-levelPrint.cpp  insert.cpp  level_order_traversal.cpp  mirror_TODO.cpp  swapnodes.cpp  vertical_order_traversal.cpp
Cpp_practice/embedded/: bitwise.cpp  longest_ones.cpp
Cpp_practice/hashmap/: find_first_duplicate.cpp  foursum.cpp  happy_num.cpp  hashmap_exercises.cpp  hashset_exercises.cpp  intersection.cpp  phonebook.cpp  threesum.cpp  twosum.cpp  valid_paranthesis.cpp
Cpp_practice/language_basics/: class_behavior.cpp  inheritance_virtual.cpp  struct_vs_union.cpp  template.cpp
Cpp_practice/linked_list/: linked_list_detect_loop.cpp  linked_list_practice.cpp  remove_duplicates.cpp  remove_node.cpp
Cpp_practice/puzzles/: combination_sum.cpp  largest_k_numbers.cpp  longest_common_subseq.cpp  maths.cpp  most_frequent_k_numbers.cpp  subset_array.cpp
Cpp_practice/recursion/: fibonacci.cpp  gcd_lcm.cpp  pascal.cpp  recursion_print_braces.cpp
Cpp_practice/sort/: bubble_sort.cpp  merge_sort.cpp  merge_sort_linked_list.cpp  quick_sort.cpp  selection_sort.cpp  sort_practice.cpp
Cpp_practice/stack/: day18_queue_stack_palindrome.cpp  queue_as_stack.cpp  queue_fifo_lifo.cpp
Cpp_practice/strings/: palindrome_subsring.cpp  reverse_words_in_string.cpp  run_length.cpp
Cpp_practice/unittest/: day25_prime_time_complx.cpp  day27_unit_test.cpp  main.cpp
Cpp_practice/unittest_project/: CMakeLists.txt
Cpp_practice/unittest_project/src/: CMakeLists.txt  find_prime.cpp  main.cpp  prime.cpp  prime.hpp  prime_test.hpp  prime_time_complex.cpp
Cpp_practice/unittest_project/test/: CMakeLists.txt  test_prime.cpp  unittest_prime.cpp
